<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LavdrimShala - Asignment1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Main_header">Please spend 2 minutes to complete this feedback form about Gjovik University College, on a scale of 1 to 10 please rate our services. </string>
    <string name="Question1">Pre-Course Infromation:</string>
    <string name="Question2">Academic support:</string>
    <string name="Question3">Administrative support:</string>
    <string name="number_result">5.0/10</string>
    <string name="submitbutton">Submit</string>
    <string name="locationbutton">Open Map</string>
    <string name="ResultsButton">View Results</string>
    <string name="Question4">Infrastructure:</string>
    <string name="Question5">Your Relationship to GUC:</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_login">Login</string>
    <string name="LoginNotification">Only authorised people can view feedback results, please enter the correct 4-digits pin and proceed to results.</string>
    <string name="Login_Hint">Enter PIN</string>
    <string name="LoginButton">Login</string>
    <string name="title_activity_results">Results</string>
    <string name="ResutlsHeader">The Results of Feedback so far:</string>
    <string name="Results_Land">View\\nResults</string>

</resources>
