<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RatingBar
        android:id="@+id/RatingBar_Question3"
        style="@style/ratingmedal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ratingBar_Question1"
        android:layout_alignRight="@+id/RatingBar_Question2"
        android:layout_below="@+id/RatingBar_Question2"
        android:layout_marginTop="22dp"
        android:numStars="10"
        android:progress="10"
        android:rating="5"
        android:stepSize="1" />

    <TextView
        android:id="@+id/TextView_Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Main_header" />

    <TextView
        android:id="@+id/TextView_Question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView_Header"
        android:layout_below="@+id/TextView_Header"
        android:layout_marginTop="16dp"
        android:text="@string/Question1" />

    <TextView
        android:id="@+id/TextView_Question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView_Question1"
        android:layout_below="@+id/ratingBar_Question1"
        android:text="@string/Question2" />

    <TextView
        android:id="@+id/TextView_Question3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView_Question2"
        android:layout_below="@+id/RatingBar_Question2"
        android:text="@string/Question3" />

    <RatingBar
        android:id="@+id/ratingBar_Question1"
        style="@style/ratingmedal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView_Question2"
        android:layout_below="@+id/TextView_Question1"
        android:max="10"
        android:numStars="10"
        android:rating="5"
        android:stepSize="1" />

    <TextView
        android:id="@+id/TextView_Question2result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/RatingBar_Question2"
        android:layout_alignRight="@+id/TextView_Header"
        android:text="@string/number_result"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RatingBar
        android:id="@+id/RatingBar_Question2"
        style="@style/ratingmedal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView_Question2"
        android:layout_below="@+id/TextView_Question2"
        android:max="10"
        android:numStars="10"
        android:rating="5"
        android:stepSize="1" />

    <TextView
        android:id="@+id/TextView_Question1result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView_Question2result"
        android:layout_alignTop="@+id/ratingBar_Question1"
        android:singleLine="true"
        android:text="@string/number_result"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_Results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/ResultsButton"
        android:onClick="openlogin" />

    <Button
        android:id="@+id/button_Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/TextView_Question2"
        android:text="@string/locationbutton"
        android:onClick="openmap" />

    <TextView
        android:id="@+id/TextView_Question4result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/RatingBar_Question4"
        android:layout_alignLeft="@+id/TextView_Question3result"
        android:text="@string/number_result"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_Results"
        android:layout_centerHorizontal="true"
        android:onClick="onSubmit"
        android:text="@string/submitbutton" />

    <TextView
        android:id="@+id/TextView_Question4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/RatingBar_Question3"
        android:layout_below="@+id/RatingBar_Question3"
        android:text="@string/Question4" />

    <RatingBar
        android:id="@+id/RatingBar_Question4"
        style="@style/ratingmedal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView_Question4"
        android:layout_below="@+id/TextView_Question4"
        android:numStars="10"
        android:progress="10"
        android:rating="5"
        android:stepSize="1" />

    <TextView
        android:id="@+id/TextView_Question5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/RatingBar_Question4"
        android:layout_below="@+id/RatingBar_Question4"
        android:text="@string/Question5" />

    <TextView
        android:id="@+id/TextView_Question3result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView_Question2result"
        android:layout_alignTop="@+id/RatingBar_Question3"
        android:text="@string/number_result"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView_Question5"
        android:layout_below="@+id/TextView_Question5"/>

</RelativeLayout>