<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <TextView
        android:id="@+id/TextView_Question1Res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginNotification" />

    <EditText
        android:id="@+id/editText_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_Question1Res"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/Login_Hint"
        android:inputType="numberPassword"
        android:maxLength="4" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_Login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/LoginButton"
        android:onClick="login" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/TextView_Question1Res"
        android:layout_below="@+id/button1"
        android:layout_marginTop="14dp" />

</RelativeLayout>